--- a/index.html
+++ b/index.html
@@ -7,6 +7,55 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="container">
+        <h2>Todo App | Nasim</h2>
+        <div class="input-section">
+         <input type="text" placeholder="add todo ..." id="task-input">
+         <input type="date" id="date-input">
+         <button id="add-button">Add</button>
+        </div>
+        <div class="todos-operator">
+            <div>
+              <button class="filter-todos">All</button>
+              <button class="filter-todos">Pending</button>
+              <button class="filter-todos">Completed</button>
+            </div>
+            <button>Delete All</button>
+        </div>
+      </div>
+    <table>
+      <thead>
+        <tr>
+          <th>Task</th>
+          <th>Date</th>
+          <th>Status</th>
+          <th>Actions</th>  
+      </thead>
+      <tbody>
+        <tr>
+          <td>text</td>
+          <td>date</td>
+          <td>pending</td>
+          <td>
+            <button>Edit</button>
+            <button>Do</button>
+            <button>Delete</button>
+          </td>
+        </tr>
+        <tr>
+          <td>text</td>
+          <td>date</td>
+          <td>pending</td>
+          <td>
+            <button>Edit</button>
+            <button>Do</button>
+            <button>Delete</button>
+          </td>
+        </tr>
+    
+      </tbody>
+    </table>
+    
     <script src="./js/app.js"></script>
 </body>
 </html>
