--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <button class="filter-todos">Pending</button>
               <button class="filter-todos">Completed</button>
             </div>
-            <button>Delete All</button>
+            <button id="delete-all-button">Delete All</button>
         </div>
       </div>
     <table>
