--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
           <th>Status</th>
           <th>Actions</th>  
       </thead>
-      <tbody>
-        
-      </tbody>
+      <tbody></tbody>
     </table>
     
     <script src="./js/app.js"></script>
