--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
             <button id="delete-all-button">Delete All</button>
         </div>
       </div>
-    <table>
-      <thead>
-        <tr>
-          <th>Task</th>
-          <th>Date</th>
-          <th>Status</th>
-          <th>Actions</th>  
-      </thead>
-      <tbody></tbody>
-    </table>
+      <div id="alert-message"></div>
+    <div class="table">
+      <table>
+        <thead>
+          <tr>
+            <th>Task</th>
+            <th>Date</th>
+            <th>Status</th>
+            <th>Actions</th>  
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
     
     <script src="./js/app.js"></script>
 </body>
