--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
          <input type="text" placeholder="add todo ..." id="task-input">
          <input type="date" id="date-input">
          <button id="add-button">Add</button>
+         <button id="edit-button">Edit</button>
         </div>
         <div class="todos-operator">
             <div>
